# YGfews

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
docs/: getting_started.md
notebooks/: example_analysis.ipynb
src/ygfews/: __init__.py  data_utils.py  visualization.py
tests/: __init__.py  test_data_utils.py  test_visualization.py
